--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <script src="./wwwroot/js/app.min.js" async></script>
     <script src="./wwwroot/js/stickyfill.js" async></script>
     <title>Document</title>
-    <style>
-
-    </style>
 </head>
 
 <body>
@@ -180,7 +177,7 @@
                 <div class="footer__option-item footer__option-volume">
                     <input type="range" type="range" min="0" max="100" value="10">
                 </div>
-                <div class="footer__option-item footer__option-musicList">
+                <div class="footer__option-item footer__option-musicist">
                     <i class="fal fa-list-music"></i>
                     <!-- <i class="far fa-album"></i> -->
                 </div>
